--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,42 +1,53 @@
+/* Header.css */
+
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #f8f9fa;
-  padding: 10px 20px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.nav-links {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-}
-
-.nav-links ul {
-  list-style: none;
-  display: flex;
-  padding: 0;
-  margin: 0;
-}
-
-.nav-links ul li {
-  margin: 0 10px;
-}
-
-.nav-links ul li a {
-  text-decoration: none;
-  color: #343a40;
-  font-weight: bold;
-}
-
-.header-icons {
-  display: flex;
-  align-items: center;
-}
-
-.header-icon {
-  margin-left: 20px;
-  font-size: 1.2rem;
-  cursor: pointer;
-}
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #333; /* Nastavi ozadje headerja */
+    padding: 20px 40px;
+    color: white;
+  }
+  
+  .header-title {
+    font-size: 18px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+  }
+  
+  .header-nav {
+    display: flex;
+    gap: 15px;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+  }
+  
+  .header-nav a {
+    color: white;
+    font-weight: 400;
+    text-decoration: none;
+  }
+  
+  .header-nav a:first-child {
+    font-weight: 700;
+  }
+  
+  .header-nav span {
+    color: white;
+    font-weight: 400;
+  }
+  
+  .header-user {
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+  }
+  
+  .header-user a {
+    color: white;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
+  
