--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,12 +1,232 @@
 /* Login.css */
 
-body, html {
-  margin: 0;
-  padding: 0;
+.login-page {
+  background-color: #040a11;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   width: 100%;
-  height: 100%;
-  overflow-x: hidden;
 }
+
+.login-page .overlap-group-wrapper {
+  background-color: rgba(4, 10, 17, 1);
+  height: 1024px;
+  width: 1440px;
+}
+
+.login-page .overlap-group {
+  background-image: url(../image/Ellipse-1.png);
+  background-size: 100% 100%;
+  height: 1024px;
+  position: relative;
+}
+
+.login-page .footer-instance {
+  background-color: transparent !important;
+  left: 82px !important;
+  position: absolute !important;
+  top: 816px !important;
+}
+
+.login-page .text-wrapper-6 {
+  color: #ffffff;
+  font-family: "Poppins", Helvetica;
+  font-size: 36px;
+  font-weight: 700;
+  left: 650px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 237px;
+  width: 142px;
+}
+
+.login-page .overlap {
+  height: 75px;
+  left: 586px;
+  position: absolute;
+  top: 347px;
+  width: 265px;
+}
+
+.login-page .title-normal {
+  height: 34px;
+  left: 1px;
+  position: absolute;
+  top: 0;
+  width: 72px;
+}
+
+.login-page .header-normal {
+  color: #ffffff;
+  font-family: "Poppins", Helvetica;
+  font-size: 22.4px;
+  font-weight: 500;
+  height: 34px;
+  left: 0;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: -2px;
+}
+
+.login-page .frame-2 {
+  background-color: #cecece;
+  border: 0.7px solid;
+  border-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0px 2.8px 2.8px #00000040;
+  height: 41px;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  top: 33px;
+  width: 265px;
+}
+
+.login-page .mail-undefined-glyph {
+  height: 17px;
+  left: 237px;
+  position: absolute;
+  top: 12px;
+  width: 17px;
+}
+
+.login-page .email-input{
+  background-color: #cecece;
+  border: hidden;
+  border-color: #ffffff;
+  border-radius: 8px;
+  height: 41px;
+  overflow: hidden;
+  position: absolute;
+  width: 220px;
+}
+
+.login-page .password-input{
+  background-color: #cecece;
+  border: hidden;
+  border-color: #ffffff;
+  border-radius: 8px;
+  height: 41px;
+  overflow: hidden;
+  position: absolute;
+  width: 220px;
+}
+
+.login-page .overlap-2 {
+  height: 74px;
+  left: 586px;
+  position: absolute;
+  top: 444px;
+  width: 265px;
+}
+
+.login-page .header-normal-wrapper {
+  height: 34px;
+  left: 1px;
+  position: absolute;
+  top: 0;
+  width: 109px;
+}
+
+.login-page .eye-undefined-glyph {
+  height: 17px;
+  left: 236px;
+  position: absolute;
+  top: 12px;
+  width: 17px;
+}
+
+.login-page .title-small {
+  height: 17px;
+  left: 595px;
+  position: absolute;
+  top: 601px;
+  width: 118px;
+}
+
+.login-page .text-small {
+  color: #ffffff;
+  font-family: "Poppins", Helvetica;
+  font-size: 11.2px;
+  font-weight: 500;
+  height: 17px;
+  left: 0;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: -1px;
+}
+
+.login-page .text-small-wrapper {
+  height: 17px;
+  left: 740px;
+  position: absolute;
+  top: 601px;
+  width: 103px;
+}
+
+.login-page .text-small-2 {
+  color: #bfc089;
+  font-family: "Poppins", Helvetica;
+  font-size: 11.2px;
+  font-weight: 500;
+  height: 17px;
+  left: 0;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: -1px;
+}
+
+.login-page .button-variant {
+  align-items: center;
+  background-color: rgba(73, 40, 106, 1);
+  border-radius: 75.97px;
+  box-shadow: 0px 4px 4px #00000040;
+  display: flex;
+  gap: 7.6px;
+  height: 32px;
+  justify-content: space-around;
+  left: 595px;
+  padding: 7.6px 15.19px;
+  position: absolute;
+  top: 558px;
+  width: 206px;
+}
+
+.login-page .text-wrapper-8 {
+  color: rgba(191, 192, 137, 1);
+  font-family: "Poppins", Helvetica;
+  font-size: 15.2px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: normal;
+  margin-bottom: -2.34px;
+  margin-top: -3.86px;
+  position: relative;
+  width: fit-content;
+}
+
+.login-page .header-instance {
+  background-color: transparent !important;
+  left: 189px !important;
+  position: absolute !important;
+  top: 60px !important;
+}
+
+.login-page .google-button {
+  height: 39px;
+  left: 804px;
+  object-fit: cover;
+  position: absolute;
+  top: 555px;
+  width: 39px;
+}
+
+/*
 
 .login-container {
   display: flex;
@@ -165,4 +385,4 @@ label {
 
 .sponsors img:hover {
   filter: brightness(1);
-}
+}*/
