--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,42 +1,32 @@
 /* Footer.css */
 
 .footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 40px;
-    background-color: #1e1e2e; /* Barva ozadja */
-    color: #d3d3d3;
-  }
-  
-  .contact-info h3 {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.2rem;
-    font-weight: 600;
-    margin-bottom: 10px;
-  }
-  
-  .contact-info p {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1rem;
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    margin: 5px 0;
-  }
-  
-  .sponsors {
-    display: flex;
-    gap: 20px;
-  }
-  
-  .sponsors img {
-    max-height: 40px; /* Nastavi višino logotipov */
-    object-fit: contain;
-    filter: brightness(0.8); /* Za zmanjšano svetlost */
-  }
-  
-  .sponsors img:hover {
-    filter: brightness(1); /* Svetlejši logotip ob hoverju */
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 60px;
+  background-color: transparent;
+  color: #ffffff;
+  font-family: "Poppins", sans-serif;
+}
+
+.contact-info h3 {
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.contact-info p {
+  margin: 5px 0;
+  font-size: 14px;
+  color: #9CABBB;
+}
+
+.sponsors {
+  display: flex;
+  gap: 15px;
+}
+
+.sponsors img {
+  height: 40px;
+}
