--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,53 +1,38 @@
 /* Header.css */
 
 .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #333; /* Nastavi ozadje headerja */
-    padding: 20px 40px;
-    color: white;
-  }
-  
-  .header-title {
-    font-size: 18px;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-  }
-  
-  .header-nav {
-    display: flex;
-    gap: 15px;
-    font-size: 14px;
-    font-family: 'Poppins', sans-serif;
-  }
-  
-  .header-nav a {
-    color: white;
-    font-weight: 400;
-    text-decoration: none;
-  }
-  
-  .header-nav a:first-child {
-    font-weight: 700;
-  }
-  
-  .header-nav span {
-    color: white;
-    font-weight: 400;
-  }
-  
-  .header-user {
-    font-size: 14px;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-  }
-  
-  .header-user a {
-    color: white;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    gap: 5px;
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 80px;
+  background-color: transparent;
+  color: #ffffff;
+  font-family: "Poppins", sans-serif;
+}
+
+.header-title {
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.header-nav {
+  display: flex;
+  gap: 30px;
+}
+
+.header-nav a,
+.header-nav span {
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.header-user a {
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
