--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,388 +1,106 @@
 /* Login.css */
 
 .login-page {
-  background-color: #040a11;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 100%;
-}
-
-.login-page .overlap-group-wrapper {
-  background-color: rgba(4, 10, 17, 1);
-  height: 1024px;
-  width: 1440px;
-}
-
-.login-page .overlap-group {
-  background-image: url(../image/Ellipse-1.png);
-  background-size: 100% 100%;
-  height: 1024px;
-  position: relative;
-}
-
-.login-page .footer-instance {
-  background-color: transparent !important;
-  left: 82px !important;
-  position: absolute !important;
-  top: 816px !important;
-}
-
-.login-page .text-wrapper-6 {
-  color: #ffffff;
-  font-family: "Poppins", Helvetica;
-  font-size: 36px;
-  font-weight: 700;
-  left: 650px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 237px;
-  width: 142px;
-}
-
-.login-page .overlap {
-  height: 75px;
-  left: 586px;
-  position: absolute;
-  top: 347px;
-  width: 265px;
-}
-
-.login-page .title-normal {
-  height: 34px;
-  left: 1px;
-  position: absolute;
-  top: 0;
-  width: 72px;
-}
-
-.login-page .header-normal {
-  color: #ffffff;
-  font-family: "Poppins", Helvetica;
-  font-size: 22.4px;
-  font-weight: 500;
-  height: 34px;
-  left: 0;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  top: -2px;
-}
-
-.login-page .frame-2 {
-  background-color: #cecece;
-  border: 0.7px solid;
-  border-color: #ffffff;
-  border-radius: 8px;
-  box-shadow: 0px 2.8px 2.8px #00000040;
-  height: 41px;
-  left: 0;
-  overflow: hidden;
-  position: absolute;
-  top: 33px;
-  width: 265px;
-}
-
-.login-page .mail-undefined-glyph {
-  height: 17px;
-  left: 237px;
-  position: absolute;
-  top: 12px;
-  width: 17px;
-}
-
-.login-page .email-input{
-  background-color: #cecece;
-  border: hidden;
-  border-color: #ffffff;
-  border-radius: 8px;
-  height: 41px;
-  overflow: hidden;
-  position: absolute;
-  width: 220px;
-}
-
-.login-page .password-input{
-  background-color: #cecece;
-  border: hidden;
-  border-color: #ffffff;
-  border-radius: 8px;
-  height: 41px;
-  overflow: hidden;
-  position: absolute;
-  width: 220px;
-}
-
-.login-page .overlap-2 {
-  height: 74px;
-  left: 586px;
-  position: absolute;
-  top: 444px;
-  width: 265px;
-}
-
-.login-page .header-normal-wrapper {
-  height: 34px;
-  left: 1px;
-  position: absolute;
-  top: 0;
-  width: 109px;
-}
-
-.login-page .eye-undefined-glyph {
-  height: 17px;
-  left: 236px;
-  position: absolute;
-  top: 12px;
-  width: 17px;
-}
-
-.login-page .title-small {
-  height: 17px;
-  left: 595px;
-  position: absolute;
-  top: 601px;
-  width: 118px;
-}
-
-.login-page .text-small {
-  color: #ffffff;
-  font-family: "Poppins", Helvetica;
-  font-size: 11.2px;
-  font-weight: 500;
-  height: 17px;
-  left: 0;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  top: -1px;
-}
-
-.login-page .text-small-wrapper {
-  height: 17px;
-  left: 740px;
-  position: absolute;
-  top: 601px;
-  width: 103px;
-}
-
-.login-page .text-small-2 {
-  color: #bfc089;
-  font-family: "Poppins", Helvetica;
-  font-size: 11.2px;
-  font-weight: 500;
-  height: 17px;
-  left: 0;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  top: -1px;
-}
-
-.login-page .button-variant {
-  align-items: center;
-  background-color: rgba(73, 40, 106, 1);
-  border-radius: 75.97px;
-  box-shadow: 0px 4px 4px #00000040;
-  display: flex;
-  gap: 7.6px;
-  height: 32px;
-  justify-content: space-around;
-  left: 595px;
-  padding: 7.6px 15.19px;
-  position: absolute;
-  top: 558px;
-  width: 206px;
-}
-
-.login-page .text-wrapper-8 {
-  color: rgba(191, 192, 137, 1);
-  font-family: "Poppins", Helvetica;
-  font-size: 15.2px;
-  font-weight: 400;
-  letter-spacing: 0;
-  line-height: normal;
-  margin-bottom: -2.34px;
-  margin-top: -3.86px;
-  position: relative;
-  width: fit-content;
-}
-
-.login-page .header-instance {
-  background-color: transparent !important;
-  left: 189px !important;
-  position: absolute !important;
-  top: 60px !important;
-}
-
-.login-page .google-button {
-  height: 39px;
-  left: 804px;
-  object-fit: cover;
-  position: absolute;
-  top: 555px;
-  width: 39px;
-}
-
-/*
-
-.login-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-  background: linear-gradient(145deg, #1e1e2e, #312450);
-  color: white;
-  width: 100vw;
-  max-width: 100%;
-  padding: 20px;
+  text-align: center;
+  background-color: transparent;
+  padding-top: 50px;
+  color: #ffffff;
+  font-family: "Poppins", sans-serif;
 }
 
-h1 {
-  font-family: 'Poppins', sans-serif;
-  font-size: 2rem;
+.title {
+  font-size: 32px;
   font-weight: 700;
   margin-bottom: 30px;
-}
-
-.login-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 300px;
+  color: #ffffff;
 }
 
 .input-group {
-  width: 100%;
-  margin-bottom: 20px;
+  position: relative;
+  width: 320px;
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
 }
 
-label {
-  font-family: 'Poppins', sans-serif;
-  font-size: 1rem;
-  font-weight: 500;
-  margin-bottom: 5px;
-  display: block;
-  color: white;
+.input-group input {
+  width: 100%;
+  height: 50px;
+  padding: 10px 40px 10px 15px;
+  font-size: 16px;
+  border: none;
+  border-radius: 8px;
+  background-color: #cecece;
+  color: #333;
+  outline: none;
 }
 
 .input-icon {
+  position: absolute;
+  right: 15px;
+  color: #333;
+}
+
+.button-group {
   display: flex;
   align-items: center;
-  background-color: #666;
-  border-radius: 8px;
-  padding: 10px;
-}
-
-.input-icon input {
-  flex: 1;
-  border: none;
-  outline: none;
-  background: transparent;
-  color: white;
-  font-size: 1rem;
-  padding-left: 10px;
-  font-family: 'Poppins', sans-serif;
-}
-
-.icon {
-  color: #ccc;
-  margin-left: 10px;
-}
-
-.login-button {
-  width: 100%;
-  padding: 10px;
-  background-color: #6a4ba3;
-  color: white;
-  border: none;
-  border-radius: 20px;
-  font-size: 1rem;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 700;
-  cursor: pointer;
-  margin-top: 20px;
-}
-
-.social-login {
-  display: flex;
-  gap: 10px;
   margin-top: 15px;
 }
 
-.google-login {
+.button {
+  width: 220px;
+  height: 45px;
+  border-radius: 25px;
+  background-color: rgba(73, 40, 106, 1);
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
   display: flex;
-  align-items: center;
   justify-content: center;
-  gap: 5px;
-  background-color: #444;
-  color: white;
-  border: none;
-  border-radius: 20px;
-  padding: 10px;
-  font-family: 'Poppins', sans-serif;
-  font-size: 0.9rem;
+  align-items: center;
   cursor: pointer;
-  flex: 1;
+}
+
+.social-icons {
+  display: flex;
+  gap: 10px;
+  margin-left: 15px;
+}
+
+.icon-button {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  font-size: 18px;
+  border: none;
+}
+
+.google-button {
+  background-color: #ffffff; /* Google icon background */
+  color: #DB4437; /* Google brand color */
+}
+
+.discord-button {
+  background-color: #5865F2; /* Discord icon background */
+  color: #ffffff; /* White icon for Discord */
 }
 
 .register-text {
-  margin-top: 20px;
-  font-size: 0.9rem;
+  margin-top: 15px;
+  font-size: 14px;
+  color: #9CABBB;
 }
 
 .register-text a {
-  color: #9b72cf;
+  color: #FF00E5;
   text-decoration: none;
-  font-weight: 700;
+  font-weight: 500;
 }
-
-.register-text a:hover {
-  text-decoration: underline;
-}
-
-.login-footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  max-width: 800px;
-  padding: 20px 40px;
-  background-color: #1e1e2e;
-  color: #d3d3d3;
-  margin-top: 40px;
-}
-
-.contact-info h3 {
-  font-family: 'Poppins', sans-serif;
-  font-size: 1.2rem;
-  font-weight: 600;
-  margin-bottom: 10px;
-}
-
-.contact-info p {
-  font-family: 'Poppins', sans-serif;
-  font-size: 1rem;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  margin: 5px 0;
-}
-
-.sponsors {
-  display: flex;
-  gap: 20px;
-}
-
-.sponsors img {
-  max-height: 40px;
-  object-fit: contain;
-  filter: brightness(0.8);
-}
-
-.sponsors img:hover {
-  filter: brightness(1);
-}*/
