--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -70,13 +70,19 @@
 
 /* Team overlay */
 .team-overlay {
-  background: conic-gradient(
-    from 120deg at 40% 60%,
-    rgba(255, 0, 255, 0.65) 0deg,
-    rgba(0, 122, 204, 0.65) 360deg
-  );
-  transform: translate(-50%, -50%) rotate(15deg);
+  width: 1178px;
+  height: 527px;
+  opacity: 0.8;
+  background: conic-gradient(from 89deg at 100.96% 31.6%, #006FFF 0deg, #FF00E5 304.2deg);
+  filter: blur(60px);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 20px; /* Optional, if you need rounded corners */
+  z-index: -1; /* Make sure it stays in the background */
 }
+
 
 /* Sponsors overlay */
 .sponsors-overlay {
