--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -84,14 +84,23 @@
 }
 
 
-/* Sponsors overlay */
+/* Sponsors Overlay */
 .sponsors-overlay {
+  width: 331.042px;
+  height: 420.949px;
+  transform: rotate(-70.393deg);
+  flex-shrink: 0;
+  border-radius: 420.949px;
+  opacity: 0.8;
   background: conic-gradient(
-    from 135deg at 50% 50%,
-    rgba(204, 0, 0, 0.65) 0deg,
-    rgba(255, 165, 0, 0.65) 360deg
+    from 88deg at 50% 50%,
+    rgba(255, 0, 229, 0.50) 0deg,
+    rgba(0, 111, 255, 0.50) 360deg
   );
-  transform: translate(-50%, -50%) rotate(-10deg);
+  filter: blur(85px);
+  position: absolute; /* Adjust positioning as necessary */
+  top: 0; /* Adjust positioning to match your layout */
+  left: 0; /* Adjust positioning to match your layout */
 }
 
 /* Blog overlay */
